tui/tests/snapshots/notebook_views__vim_keymap_normal_idle.snap
---
source: tui/tests/notebook_views.rs
assertion_line: 87
expression: text
snapshot_kind: text
---
 Note 'Sample Note' normal mode                                                                        [?] Show keymap 
[Browser]                                   ▐ 󱇗 Sample Note                                                             
 󰝰 Notes                                    ▐ 1 Hi :D                                                                   
   󱇗 Sample Note                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                        ┌───────────────Confirm────────────────┐                                        
                                        │                                      │                                        
                                        │  Do you want to quit?                │                                        
                                        │                                      │                                        
                                        │                                      │                                        
                                        │  [y] Confirm                         │                                        
                                        │  [n] Cancel                          │                                        
                                        │                                      │                                        
                                        └──────────────────────────────────────┘                                        
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐ NORMAL   󰝰 Notes  󱇗 Sample Note 
