tui/tests/snapshots/notebook_views__vim_keymap_normal_numbering.snap
---
source: tui/tests/notebook_views.rs
assertion_line: 160
expression: text
snapshot_kind: text
---
 Note 'Sample Note' normal mode                                                                        [?] Show keymap 
[Browser]                                   ▐ 󱇗 Sample Note                                                             
 󰝰 Notes                                    ▐ 1 Hi :D                                                                   
   󱇗 Sample Note                            ▐                                                                           
                                            ▐                                                                           
               ┌───────────────────────────VIM NORMAL MODE KEYMAP - NUMBERING───────────────────────────┐               
               │                                                                                        │               
               │  EXTENDING NUMBERING MODE                                                              │               
               │  [0-9] Append additional digits to extend the current command                          │               
               │                                                                                        │               
               │  TO INSERT MODE                                                                        │               
               │  [s] Delete specified number of characters and go to insert mode                       │               
               │  [S] Delete the entire line and go to insert mode                                      │               
               │                                                                                        │               
               │  TO OTHER MODES                                                                        │               
               │  [c] Go to change mode with repeat count (prepare to edit text)                        │               
               │  [y] Go to yank mode with repeat count (prepare to copy text)                          │               
               │  [d] Go to delete mode with repeat count (prepare to delete text)                      │               
               │                                                                                        │               
               │  MOVE CURSOR AND RETURN TO NORMAL MODE                                                 │               
               │  [h] Move cursor left by the specified number of times                                 │               
               │  [j] Move cursor down by the specified number of times                                 │               
               │  [k] Move cursor up by the specified number of times                                   │               
               │  [l] Move cursor right by the specified number of times                                │               
               │  [w] Move cursor to the start of the next word, repeated by the specified number       │               
               │  [e] Move cursor to the end of the next word, repeated by the specified number         │               
               │  [b] Move cursor to the start of the previous word, repeated by the specified number   │               
               │  [G] Move cursor to the specified line number                                          │               
               │                                                                                        │               
               │  EDIT TEXT AND RETURN TO NORMAL MODE                                                   │               
               │  [x] Delete specified number of characters and return to normal mode                   │               
               │                                                                                        │               
               │                                                                                        │               
               │                                 Press any key to close                                 │               
               │                                                                                        │               
               └────────────────────────────────────────────────────────────────────────────────────────┘               
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐ NORMAL   󰝰 Notes  󱇗 Sample Note 
